Few CSS tweaks to stop tags breaking on to two lines, and a min height added to posts to stop edit/delete buttons overlapping into new content

--- a/app/assets/stylesheets/grow.scss
+++ b/app/assets/stylesheets/grow.scss
@@ -38,6 +38,7 @@ body {
 
 .content-card {
   margin: 0 0 20px 0;
+  min-height:117px;
   border-bottom:1px solid $border-grey;
   padding: 0;
   &:last-child{border-bottom: none;}
@@ -66,6 +67,7 @@ margin: 0;
   border-radius: 2px;
   line-height: 3em;
 	margin-right: 10px;
+  white-space: nowrap;
 
 }
 
